Added whenever to update crontab

--- a/taperole/omnibox.yml
+++ b/taperole/omnibox.yml
@@ -20,6 +20,7 @@
     - database_load
     - unicorn_activate
     - frontend_deploy
+    - wheneverize
     # - delayed_job
     # - sidekiq
     # - redis
