--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,7 @@ language: ruby
 before_script:
   - cp config/database.travis.yml config/database.yml
   - cp config/secrets.travis.yml config/secrets.yml
-  - psql -c 'create database epa_prototype_test;' -U postgres
-  - bundle exec rake db:migrate --trace
+  - bundle exec rake db:setup --trace
   - bundle exec rake db:test:prepare --trace
 after_script:
 rvm:
