--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "epa-prototype-api.wiki"]
 	path = epa-prototype-api.wiki
 	url = https://github.com/smashingboxes/epa-prototype-api.wiki.git
+  branch=master
